# template_controller_rtc

./: README.md  rename.sh
template_controller_msgs/: CMakeLists.txt
template_controller_rtc/: CMakeLists.txt  package.xml
template_controller_rtc/idl/: TemplateControllerService.idl
template_controller_rtc/rtc/TemplateController/: CMakeLists.txt  TemplateController.cpp  TemplateControllerService_impl.h
